<resources>
    <string name="app_name">Ewill</string>

    <string name="google_maps_api_key">AIzaSyCiUwA-hp1AmzGKn3KVL45qDuBUjxMZOxg</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="register">Dont have an account? <b>Create Now</b></string>
    <string name="username_sent_to_email">Username has been sent to your\nemail address</string>
    <string name="password_sent_to_email">Password has been sent to your\nemail address</string>


    <!-- ERROR MESSAGE -->
    <string name="err_msg_email_conf">Email does not match</string>
    <string name="err_msg_username_conf">Username does not match</string>
    <string name="err_msg_pass_conf">Password does not match</string>
    <string name="err_msg_pass_regex">Not valid password</string>


    <string name="msg_forgotusername">Username has been sent to your email address</string>
    <string name="msg_forgotpassword">Password has been sent to your email address</string>


    <string name="reg_verification_email">A verification link has been sent to your email address.
        Click on the verification link and then click "Verify". If your mew email address is not verified within 24 hours,
    your account myWill be closed.\n\nHavent received the verification \nlink? Click</string>

    <string name="resend"><font size="24"><b><u>Resend</u></b></font></string>

    <string name="or_contact_us">or <u>Contact Us</u></string>

    <string name="reg_verification_phone">A verification code has been sent to your mobile number. Enter the verification code below.
        If your mobile number is not verified within 24 hours,
        your account myWill be closed.\n\nHaven&#8217;t received the verification code? Click Resend or <u>Contact Us</u></string>
    <string name="reg_resend"><font size="20"><b><u>Resend</u></b></font></string>
    <string name="contactus_veri">or <b><u>Contact Us</u></b></string>

    <string name="verification_change_email">A verification link has been sent to your new email address.
        Click on the verification link and then click "Verify". If your new email address is not verified within 24 hours,
    your old email address myWill continue to be used.\n\nHavent received the verification \nlink? Click</string>

    <string name="verification_change_mobile_num">A verification code has been sent to your mobile number.
        Please enter the verification code below. If your mobile number is not verified within 24 hours,
        your old mobile phone</string>

    <string name="resend_or_contact_us">Havent received the verification \ncode? Click resend or <u>Contact Us</u></string>

    <string name="title_activity_login">LoginActivity</string>
    <string-array name="phone_country">
        <item>Indonesia</item>
        <item>Singapore</item>
        <item>Malaysia</item>
        <item>Philipines</item>
    </string-array>
    <string-array name="security_question">
        <item>What is your first pet name?</item>
        <item>What is your favorite teachers name?</item>
        <item>What is your mothers name?</item>
        <item>What is your cousins name?</item>
    </string-array>
    <string name="loading_message">Loading&#8230;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\n
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\n
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


    <string name="verify_email">verify_email</string>
    <string name="wait_verify_email">wait_verify_email</string>
    <string name="verify_phone">verify_phone</string>


    <!-- ALERT STRING -->
    <string name="min_age">Minimum age is must be 21 years old</string>

</resources>
