<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:layout_margin="@dimen/margin_standar">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verification_change_email"
            android:textAlignment="center"
            android:id="@+id/tv_confirm_sent"
            style="@style/TextViewContent2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resend"
            android:text="@string/resend"
            android:textAlignment="center"
            style="@style/TextViewContent2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_contact_us"
            android:textAlignment="center"
            style="@style/TextViewContent2"/>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Ok"
            style="@style/ButtonStandard"/>
    </LinearLayout>
</FrameLayout>