<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moonlay.litewill.fragments.reg_member.Reg9EmailVerifyFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_standar_side">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewContent2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_verification_email"
                android:textAlignment="center" />

            <TextView
                style="@style/TextViewContent2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_resend"
                android:text="@string/reg_resend"
                android:textAlignment="center" />

            <TextView
                style="@style/TextViewContent2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactus_veri"
                android:textAlignment="center" />

        </LinearLayout>

        <!--<Button
            android:id="@+id/button_next9"
            style="@style/ButtonStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:text="Ok" />-->
    </RelativeLayout>

</FrameLayout>
