<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.forgot.ForgotName2Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_standar_side"
        android:orientation="vertical"
        >

        <TextView
            style="@style/TextViewContent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/msg_forgotusername"
            android:textAlignment="center" />

        <TextView
            style="@style/TextViewContent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Haven't received the email? Click"
            android:textAlignment="center" />

        <TextView
            style="@style/TextViewContent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_resend"
            android:text="@string/resend"
            android:textAlignment="center" />

        <TextView
            style="@style/TextViewContent2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or_contact_us"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_next"
            style="@style/ButtonStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Ok" />
    </LinearLayout>

    <!-- TODO: Update blank fragment layout -->


</FrameLayout>
